sample now loads the question view

--- a/src/ReactiveUI.WPF.SampleApp/App.xaml
+++ b/src/ReactiveUI.WPF.SampleApp/App.xaml
@@ -1,9 +1,8 @@
 ﻿<Application x:Class="ReactiveUI.WPF.SampleApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ReactiveUI.WPF.SampleApp"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:ReactiveUI.WPF.SampleApp">
     <Application.Resources>
-         
+
     </Application.Resources>
 </Application>
