--- a/src/ReactiveUI.WPF.SampleApp/Views/QuestionnaireView.xaml
+++ b/src/ReactiveUI.WPF.SampleApp/Views/QuestionnaireView.xaml
@@ -21,6 +21,7 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
@@ -51,5 +52,7 @@
         <Label Grid.Column="0" Grid.Row="6">Question 5</Label>
         <TextBox Grid.Column="1" Grid.Row="6" Name="AnswerFive" Width="120" />
         <Label Grid.Column="2" Grid.Row="6" Name="AnswerFiveLengthRemaining" Width="120">??</Label>
+
+        <Button Grid.Column="0" Grid.Row="8" Name="LaunchInteraction">Launch Interaction</Button>
     </Grid>
 </local:ReactiveQuestionnaireWindow>
